...
    <string name="minus_sign">-</string>
    <string name="equal_sign">=</string>
    <string name="goal">Goal</string>
    <string name="food">Food</string>
    <string name="remaining">Remaining</string>
    <string name="breakfast">Breakfast</string>
    <string name="add_food">+ Add Food</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
...
    <string name="carbs">Carbs</string>
    <string name="fats">Fats</string>
    <string name="fat">Fat</string>
    <string name="proteins">Proteins</string>
    <string name="protein">Protein</string>
    <string name="meal">Meal</string>
    <string name="quick_add">Quick Add</string>
    <string name="please_input_a_number">Please input a number</string>
    <string name="cancel">Cancel</string>
    <string name="could_not_find_barcode">Could not find barcode</string>
    <string name="please_input_a_barcode">Please input a barcode</string>
    <string name="addFood">addFood</string>
    <string name="one_hundred">100</string>
    <string name="caloriesAmount">caloriesAmount</string>
    <string name="carbohydratesAmount">carbohydratesAmount</string>
    <string name="fatsAmount">fatsAmount</string>
    <string name="proteinsAmount">proteinsAmount</string>
    <string name="barcode">Barcode</string>
    <string name="currentDate">currentDate</string>
    <string name="zero">0</string>
...
    <string name="add_food_info">Add food info</string>
    <string name="scan">Scan</string>
    <string name="exercise_delete">Exercise delete</string>
    <string name="food_delete">Food delete</string>
    <string name="food_info">Food info</string>
    <string name="add_goals">Add goals</string>
    <string name="calories_delete">Calories delete</string>
    <string name="calories_info">Calories info</string>
    <string name="macros">Macros</string>
    <string name="log_out">Log out</string>


    <!-- Strings used for fragments for navigation -->
...
