...
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Project.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/quickAddInfoToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Project.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

...
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/quickAddEditText"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:background="@drawable/rounded_corner_alice_blue"
            android:maxLength="4"
            android:paddingHorizontal="15dp"
...
