<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enterCalories"
        android:layout_marginStart="15dp"
        android:layout_width="150dp"
        android:maxLength="4"
        android:layout_height="wrap_content"
        android:hint="@string/enter_calories"
        android:inputType="numberDecimal"
        android:maxLines="1" />

</LinearLayout>